--- a/src/stories/Introduction.stories.mdx
+++ b/src/stories/Introduction.stories.mdx
@@ -8,7 +8,7 @@ import Plugin from './assets/plugin.svg';
 import Repo from './assets/repo.svg';
 import StackAlt from './assets/stackalt.svg';
 
-<Meta title="Introduction" />
+<Meta title="Introduction"/>
 
 <style>{`
   .subheading {
@@ -114,12 +114,14 @@ import StackAlt from './assets/stackalt.svg';
   
 `}</style>
 
-# Welcome to Storybook
+# Welcome to SuperDDA IuPay Storybook
 
-Storybook helps you build UI components in isolation from your app's business logic, data, and context.
-That makes it easy to develop hard-to-reach states. Save these UI states as **stories** to revisit during development, testing, or QA.
+In this website you will be able to view all components that can be used in the react-native-superdda-iupay package.
 
-Browse example stories now by navigating to them in the sidebar.
+Feel free to navigate to any component you like in the sidebar and don't forget to view the docs to see example usage.
+
+
+<!-- Browse example stories now by navigating to them in the sidebar.
 View their code in the `src/storybook-examples` directory to learn how they work.
 We recommend building UIs with a [**component-driven**](https://componentdriven.org) process starting with atomic components and ending with pages.
 
@@ -191,4 +193,4 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
 
 <div class="tip-wrapper">
   <span class="tip">Tip</span>Edit the Markdown in <code>src/storybook-examples/welcome.mdx</code>
-</div>
+</div> -->
